# super_crazy_hard_work

./: .env  README.md  main.py  pyproject.toml
data/: user_settings.json
src/: config_log.py  currency.py  decorators.py  operation.py  reports.py  service.py  time.py  utils.py  views.py
tests/: test_currency.py  test_decorators.py  test_operation.py  test_reports.py  test_service.py  test_time.py  test_utils.py  test_views.py
