[tool.poetry]
name = "super-crazy-hard-work"
version = "1.0.0"
description = "project about banking operations"
authors = ["Valeria Kuzmina"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.1.0"
black = "^24.4.2"
mypy = "^1.10.0"
pandas = "^2.2.2"
requests = "^2.32.3"
pandas-stubs = "^2.2.2.240603"
xlrd = "^2.0.1"
stubs = "^1.0.0"
types-requests = "^2.32.0.20240622"
yfinance = "^0.2.40"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
python-dotenv = "^1.0.1"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.isort]
# максимальная длина строки
line_length = 119